# database-version-control

./: .gitignore  README.md  pyproject.toml
notebooks/: test_backup_server.ipynb
scripts/: backup_database_schema.py  setup_server_tracking.py
src/databaseversioncontrol/: __init__.py  database.py
tests/: test_database.py
