[project]
name = "databaseversioncontrol"
version = "0.1.0"
authors = [{ name = "Samuel Lloyd", email = "samueljohnlloyd12@gmail.com" }]
description = "Track changes to database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mysql-connector-python>=9.1.0",
    "sql-formatter>=0.6.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.setuptools]
packages = ["databaseversioncontrol"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
